# xarray_extras

./: .gitignore  README.md  pyproject.toml  setup.py
xarray_extras/: __init__.py  geo.py  geo_regrid.py  regrid.py  xrx.py
