[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pawel Wolff"}]
name = "xarray_extras"
version = "0.1"
dependencies = [
  "numpy >= 1.23.5",
  "pandas >= 1.5.2",
  "xarray >= 2023.6.0",
]
requires-python = ">= 3.9"
readme = "README.md"
